# edgewatch-telemetry

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CUSTOM_INSTRUCTIONS.md  Dockerfile  Makefile  README.md  RUNBOOK.md  SECURITY.md  alembic.ini  docker-compose.yml  edgewatch_buffer_demo-well-001.sqlite  edgewatch_buffer_demo-well-001.sqlite-shm  edgewatch_buffer_demo-well-001.sqlite-wal  edgewatch_buffer_demo-well-002.sqlite  edgewatch_buffer_demo-well-003.sqlite  harness.toml  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  deploy-gcp.yml  gcp-terraform-plan.yml  publish-image-multiarch.yml  security-gitleaks.yml  security-trivy.yml  terraform-apply-gcp.yml  terraform-drift.yml  terraform-hygiene.yml
agent/: .env.example  README.md  buffer.py  cellular.py  cost_caps.py  device_policy.py  edgewatch_agent.py  power_management.py  replay.py  requirements.txt  simulator.py
agent/config/: example.sensors.yaml  (+1 more)
docker/: api.Dockerfile
docs/: BOM.md  CODEX_HANDOFF.md  CONTRACTS.md  COST_HYGIENE.md  DEPLOY_GCP.md  DEPLOY_RPI.md  DESIGN.md  DEV_FAST.md  DEV_MAC.md  DOMAIN.md  DRIFT_DETECTION.md  HARDWARE.md  IAM_STARTER_PACK.md  MANUAL_DEPLOY_GCP_CLOUD_RUN.md  MULTIARCH_IMAGES.md  NEXT_ITERATION.md  OBSERVABILITY.md  OBSERVABILITY_OTEL.md  PARTICLE_PARITY_MATRIX.md  PRODUCTION_POSTURE.md  PROJECT_ALIGNMENT.md  ROADMAP.md  RPI_AGENT.md  START_HERE.md  STYLE.md  TEAM_WORKFLOW.md  WEB_UI.md  WIF_GITHUB_ACTIONS.md  WORKFLOW.md  architecture.md  gcp-deploy.md  security.md
migrations/: env.py  script.py.mako
scripts/: check_demo_env_sync.py  ci.sh  harness.py  operator_cli.py  package_dist.py  repo_hygiene.py
tests/: test_admin_audit.py  test_admin_deployments.py  test_admin_device_create.py  test_admin_shutdown_controls.py  test_agent_buffer.py  test_agent_cellular.py  test_agent_command_delivery.py  test_agent_cost_caps.py  test_agent_device_policy.py  test_agent_power_management.py  test_agent_procedure_delivery.py  test_agent_runtime_power_saver.py  test_agent_update_delivery.py  test_alerts_routes.py  test_analytics_export.py  test_authz.py  test_contracts.py  test_demo_env_sync.py  test_demo_fleet_derivation.py  test_device_access.py  test_device_cloud_routes.py  test_device_commands_routes.py  test_device_identity.py  test_device_policy.py  test_device_summary_routes.py  test_device_updates_routes.py  test_device_updates_service.py  test_fleet_routes.py  test_ingest_pipeline.py  test_ingestion_runtime.py  test_media_ring_buffer.py  test_media_runtime.py  test_media_service.py  test_migrations_sqlite.py  test_models.py  test_monitor.py  test_notifications_service.py  test_observability_metrics.py  test_oil_life_tool.py  test_operator_cli.py  (+19 more)
web/: index.html  package.json  vite.config.ts
(+239 files in other folders)
